--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,8 +7,23 @@ body {
 }
 
 a {
-    text-decoration: none;
     color: inherit;
+    padding: 8px;
+    margin-left: 6px;
+    margin-right: 6px;
+    transition: ease 0.2s;
+}
+
+a:hover {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+}
+
+.link {
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .btn {
